[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/b/b1p.png" type="Texture" id=1]
[ext_resource path="res://rsc/main/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/ARCO for OSX.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/b/b1.png" type="Texture" id=4]
[ext_resource path="res://rsc/sfx/SFX.tscn" type="PackedScene" id=5]
[ext_resource path="res://rsc/musics/Musics.tscn" type="PackedScene" id=6]
[ext_resource path="res://rsc/lifes/Lifes.tscn" type="PackedScene" id=9]
[ext_resource path="res://rsc/game_over/GameOver.tscn" type="PackedScene" id=10]
[ext_resource path="res://rsc/bg/Bg.tscn" type="PackedScene" id=12]
[ext_resource path="res://rsc/fade/Fade.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 7
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 500.05, 1 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Bg" parent="." instance=ExtResource( 12 )]
color = Color( 0.545098, 0.858824, 0.490196, 1 )

[node name="Fade" parent="." instance=ExtResource( 13 )]
visible = false
COLOR = "blue"

[node name="Lifes" parent="." instance=ExtResource( 9 )]

[node name="Score" type="Label" parent="." groups=[
"score",
]]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 40.0
margin_right = 250.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -224.0
margin_right = 232.0
margin_bottom = -96.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b1" type="TextureButton" parent="Buttons"]
modulate = Color( 0.839216, 0.109804, 0.109804, 1 )
margin_right = 128.0
margin_bottom = 128.0
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b1_hitbox" type="Area2D" parent="Buttons/b1" groups=[
"button1",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/b1/b1_hitbox"]
position = Vector2( 62, 64 )
shape = SubResource( 2 )

[node name="b2" type="TextureButton" parent="Buttons"]
modulate = Color( 0.12549, 0.568627, 0.890196, 1 )
margin_left = 168.0
margin_right = 296.0
margin_bottom = 128.0
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )

[node name="b2_hitbox" type="Area2D" parent="Buttons/b2" groups=[
"button2",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/b2/b2_hitbox"]
position = Vector2( 62, 64 )
shape = SubResource( 2 )

[node name="b3" type="TextureButton" parent="Buttons"]
modulate = Color( 1, 0.984314, 0, 1 )
margin_left = 336.0
margin_right = 464.0
margin_bottom = 128.0
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )

[node name="b3_hitbox" type="Area2D" parent="Buttons/b3" groups=[
"button3",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/b3/b3_hitbox"]
position = Vector2( 62, 64 )
shape = SubResource( 2 )

[node name="CoinContainer" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="GameOver" parent="." instance=ExtResource( 10 )]

[node name="Audios" parent="." instance=ExtResource( 5 )]

[node name="Limit" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_right = 250.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Limit" type="Area2D" parent="Limit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limit/Limit"]
shape = SubResource( 3 )

[node name="Musics" parent="." instance=ExtResource( 6 )]

[node name="Playing" parent="Musics" index="0"]
volume_db = -25.0
autoplay = true

[connection signal="button_up" from="Buttons/b1" to="." method="_on_b1_button_up"]
[connection signal="pressed" from="Buttons/b1" to="." method="_on_b1_pressed"]
[connection signal="area_entered" from="Buttons/b1/b1_hitbox" to="." method="_on_b1_hitbox_area_entered"]
[connection signal="area_exited" from="Buttons/b1/b1_hitbox" to="." method="_on_b1_hitbox_area_exited"]
[connection signal="button_up" from="Buttons/b2" to="." method="_on_b2_button_up"]
[connection signal="pressed" from="Buttons/b2" to="." method="_on_b2_pressed"]
[connection signal="area_entered" from="Buttons/b2/b2_hitbox" to="." method="_on_b2_hitbox_area_entered"]
[connection signal="area_exited" from="Buttons/b2/b2_hitbox" to="." method="_on_b2_hitbox_area_exited"]
[connection signal="button_up" from="Buttons/b3" to="." method="_on_b3_button_up"]
[connection signal="pressed" from="Buttons/b3" to="." method="_on_b3_pressed"]
[connection signal="area_entered" from="Buttons/b3/b3_hitbox" to="." method="_on_b3_hitbox_area_entered"]
[connection signal="area_exited" from="Buttons/b3/b3_hitbox" to="." method="_on_b3_hitbox_area_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="area_exited" from="Limit/Limit" to="." method="_on_Limit_area_exited"]

[editable path="Bg"]
[editable path="GameOver"]
[editable path="Audios"]
[editable path="Musics"]
